--- a/hivemind/tavern/test_database_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_database_api_patterns.tavern.yaml
@@ -4,7 +4,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # plenty of differences but comparable
 
   includes:
     - !include common.yaml
@@ -28,7 +28,6 @@
           extra_kwargs:
             method: "list_comments"
             directory: "database_api_patterns"
-            ignore_tags: ["id"]
 
 ---
   test_name: Hivemind database_api.find_comments patterns test
@@ -36,7 +35,7 @@
   marks:
     - patterntest
     - failing
-    - xfail
+    - xfail # plenty of differences but comparable
 
   includes:
     - !include common.yaml
@@ -67,6 +66,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_cashout_t
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -100,6 +101,7 @@ test_name: Hivemind database_api.list_comments patterns test order "by_cashout_t
 
 marks:
   - patterntest
+  - failing
   - xfail # shows error when there is only one of optional value (first)
 
 includes:
@@ -134,6 +136,7 @@ test_name: Hivemind database_api.list_comments patterns test order "by_cashout_t
 
 marks:
   - patterntest
+  - failing
   - xfail # shows error when there is only one of optional value (first)
 
 includes:
@@ -173,6 +176,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_cashout_t
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -212,8 +217,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_cashout_t
 
 marks:
   - patterntest
-  - xfail # show first posts comments
   - failing
+  - xfail # show first posts comments
 
 includes:
   - !include common.yaml
@@ -248,6 +253,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_cashout_t
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -281,6 +288,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_cashout_t
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -310,6 +319,7 @@ test_name: Hivemind database_api.list_comments patterns test order "by_cashout_t
 
 marks:
   - patterntest
+  - failing
   - xfail # problem with date cashout_time = "1970-01-01 00:00:00" or 1969-12-31T23:59:59
 
 includes:
@@ -345,8 +355,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_cashout_t
 
 marks:
   - patterntest
-  - xfail # wrong output, given cashout_time exist in database (output later 2016-09-15T19:47:27)
   - failing
+  - xfail # wrong output, given cashout_time exist in database (output later 2016-09-15T19:47:27)
 
 includes:
   - !include common.yaml
@@ -382,6 +392,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_permlink"
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -411,6 +423,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_permlink"
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -440,6 +454,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_permlink"
 
 marks:
   - patterntest # author first - when empty, takes alphabetical (later by permlink)
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -478,6 +494,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_permlink"
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -517,6 +535,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_root" goo
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -551,8 +571,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_root" no 
 
 marks:
   - patterntest
-  - xfail # first two params are required
   - failing
+  - xfail # first two params are required
 
 includes:
   - !include common.yaml
@@ -587,6 +607,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_root" onl
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -620,8 +642,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_root" req
 
 marks:
   - patterntest
-  - xfail # wrong output
   - failing
+  - xfail # wrong output
 
 includes:
   - !include common.yaml
@@ -656,6 +678,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_root" req
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -690,6 +714,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_root" all
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -724,8 +750,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_root" wit
 
 marks:
   - patterntest
-  - xfail # child_author, child_permlink are optional
   - failing
+  - xfail # child_author, child_permlink are optional
 
 includes:
   - !include common.yaml
@@ -759,6 +785,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_root" wro
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -792,6 +820,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_root" wro
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -826,6 +856,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_parent"
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -860,8 +892,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_parent" n
 
 marks:
   - patterntest
-  - xfail # first 2 params are required
   - failing
+  - xfail # first 2 params are required
 
 includes:
   - !include common.yaml
@@ -896,8 +928,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_parent" n
 
 marks:
   - patterntest
-  - xfail # second param is required
   - failing
+  - xfail # second param is required
 
 
 includes:
@@ -933,6 +965,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_parent" r
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -967,8 +1001,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_parent" c
 
 marks:
   - patterntest
-  - xfail # child_author, child_permlink are optional 
   - failing
+  - xfail # child_author, child_permlink are optional 
 
 
 includes:
@@ -1003,6 +1037,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_parent" a
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -1037,8 +1073,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_parent" n
 
 marks:
   - patterntest
-  - xfail # unexpected output - takes it aplhabetical from author
   - failing
+  - xfail # unexpected output - takes it aplhabetical from author
 
 
 includes:
@@ -1075,6 +1111,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_author_la
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -1109,6 +1147,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_author_la
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -1142,6 +1182,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_author_la
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -1175,6 +1217,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_author_la
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -1209,6 +1253,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_author_la
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -1243,8 +1289,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_author_la
 
 marks:
   - patterntest
-  - xfail # output should be the same as prev test or with completely diff author
   - failing
+  - xfail # output should be the same as prev test or with completely diff author
 
 
 includes:
@@ -1281,6 +1327,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_last_upda
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -1310,8 +1358,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_last_upda
 
 marks:
   - patterntest
-  - xfail # first arg is author, not date (error about date)
   - failing
+  - xfail # first arg is author, not date (error about date)
 
 
 includes:
@@ -1346,8 +1394,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_last_upda
 
 marks:
   - patterntest
-  - xfail # shows different comment than expected
   - failing
+  - xfail # shows different comment than expected
 
 
 includes:
@@ -1383,6 +1431,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_last_upda
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -1416,6 +1466,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_last_upda
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
@@ -1449,6 +1501,7 @@ test_name: Hivemind database_api.list_comments patterns test order "by_last_upda
 
 marks:
   - patterntest
+  - failing
   - xfail # show last comments in base
 
 includes:
@@ -1484,6 +1537,8 @@ test_name: Hivemind database_api.list_comments patterns test order "by_last_upda
 
 marks:
   - patterntest
+  - failing
+  - xfail
 
 includes:
   - !include common.yaml
