[ABW]: accepted differences in id for tests that started to be comparable one test changed completely as original has no way of being comparable at the moment added more detailed descriptions of problems for tests that are almost ok two bridge_api tests marked as passing

--- a/hivemind/tavern/test_bridge_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_bridge_api_patterns.tavern.yaml
@@ -33,7 +33,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # payout is zero in some cases, grey, flag_weight, total_votes counts all without filtering
+    - xfail # payout is zero in some cases, grey, flag_weight
 
   includes:
     - !include common.yaml
@@ -63,8 +63,6 @@
 
   marks:
     - patterntest
-    - failing
-    - xfail # total_votes (new version counts all the listed votes, old does not count some)
 
   includes:
     - !include common.yaml
@@ -94,8 +92,6 @@
 
   marks:
     - patterntest
-    - failing
-    - xfail # total_votes counts all without filtering
 
   includes:
     - !include common.yaml
