[ABW]: Added .orig.json for all tests (even if not different from pattern) to make it possible to compare with original response of old HiveMind/fat node Accepted differences in patterns: future cashout_time, max_cashout_time (no longer relevant), rshares/weight related after first payout but before final, last_payout in the same case when payout was ineffective (that difference will last even at full sync), numerical instead of strings for long numbers (consistency) Changed test comments to reflect current differences (mostly active, some payout related, still plenty of differences in order)

--- a/hivemind/tavern/test_condenser_api_patterns.tavern.yaml
+++ b/hivemind/tavern/test_condenser_api_patterns.tavern.yaml
@@ -584,7 +584,7 @@
   test_name: Hivemind condenser_api.get_account_reputations patterns test
 
   marks:
-    - patterntest
+    - patterntest # to be changed for account that has some reputation
 
   includes:
     - !include common.yaml
@@ -644,7 +644,7 @@
   marks:
     - patterntest
     - failing
-    - xfail # wrong pattern, wrong test params (empty result)
+    - xfail # server error (to be investigated)
 
   includes:
     - !include common.yaml
@@ -660,7 +660,7 @@
           jsonrpc: "2.0"
           id: 1
           method: "condenser_api.get_accounts"
-          params: ["steemit"]
+          params: [["steemit"]]
       response:
         status_code: 200
         verify_response_with:
